--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Add a cocktail</h1>
 <%= simple_form_for(@cocktail) do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit "Add", class:"btn btn-primary rounded" %>
 <% end %>
 
