--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -5,6 +5,7 @@
     <%= d.description %>
     <%= link_to "Delete", dose_path(d), method: :delete %>
   <% end %>
+    <%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
 </p>
 <%= link_to "Add a dose", new_cocktail_dose_path(@cocktail) %>
 
