--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: :true %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
@@ -47,6 +47,6 @@
   </div>
 </div>
     <%= yield %>
-  <%= javascript_pack_tag "application" %>    <!-- from app/javascript/packs/application.js -->
+  <%#= javascript_pack_tag "application" %>    <!-- from app/javascript/packs/application.js -->
 </body>
 </html>
